--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3"
+  },
   "devDependencies": {
     "@laylazi/bootstrap-rtl": "^4.6.0-1",
     "bootstrap": "^4.6.0",
     "css-loader": "^5.2.0",
+    "expose-loader": "^2.0.0",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.3.1",
